--- a/src/boltz/test.ipynb
+++ b/src/boltz/test.ipynb
@@ -46,8 +46,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicting DataLoader 0: 100%|██████████| 1/1 [01:31<00:00,  0.01it/s]Number of failed examples: 0\n",
-      "Predicting DataLoader 0: 100%|██████████| 1/1 [01:31<00:00,  0.01it/s]\n"
+      "Predicting DataLoader 0:   0%|          | 0/1 [00:00<?, ?it/s]torch.Size([1, 846, 384])\n",
+      "torch.Size([1, 846, 846, 128])\n",
+      "torch.Size([1, 846, 455])\n",
+      "torch.Size([1, 6016])\n",
+      "Predicting DataLoader 0: 100%|██████████| 1/1 [00:29<00:00,  0.03it/s]\n"
      ]
     }
    ],
