Embedding extraction enabled

--- a/src/boltz/test.ipynb
+++ b/src/boltz/test.ipynb
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "Checking input data.\n",
-      "Running predictions for 1 structure\n",
+      "Running predictions for 2 structures\n",
       "Processing input data.\n"
      ]
     },
@@ -18,14 +18,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/1 [00:00<?, ?it/s]"
+      "  0%|          | 0/2 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating MSA for test.fasta with 1 protein entities.\n"
+      "Generating MSA for test/test copy 3.fasta with 1 protein entities.\n"
      ]
     },
     {
@@ -33,7 +33,22 @@
      "output_type": "stream",
      "text": [
       "COMPLETE: 100%|██████████| 150/150 [elapsed: 00:02 remaining: 00:00]\n",
-      "100%|██████████| 1/1 [00:02<00:00,  2.55s/it]\n",
+      " 50%|█████     | 1/2 [00:02<00:02,  2.61s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating MSA for test/test copy 2.fasta with 1 protein entities.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "COMPLETE: 100%|██████████| 150/150 [elapsed: 00:02 remaining: 00:00]\n",
+      "100%|██████████| 2/2 [00:05<00:00,  2.57s/it]\n",
       "GPU available: True (cuda), used: True\n",
       "TPU available: False, using: 0 TPU cores\n",
       "HPU available: False, using: 0 HPUs\n",
@@ -46,11 +61,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicting DataLoader 0:   0%|          | 0/1 [00:00<?, ?it/s]torch.Size([1, 846, 384])\n",
-      "torch.Size([1, 846, 846, 128])\n",
-      "torch.Size([1, 846, 455])\n",
-      "torch.Size([1, 6016])\n",
-      "Predicting DataLoader 0: 100%|██████████| 1/1 [00:29<00:00,  0.03it/s]\n"
+      "Predicting DataLoader 0: 100%|██████████| 2/2 [00:33<00:00,  0.06it/s]\n"
      ]
     }
    ],
@@ -58,7 +69,7 @@
     "from main_test import predict\n",
     "\n",
     "params = {\n",
-    "    \"data\": \"test.fasta\",  # Replace with your input data path\n",
+    "    \"data\": \"test\",  # Replace with your input data path\n",
     "    \"out_dir\": \"temp\",  # Replace with your desired output directory\n",
     "    \"cache\": \"/home/hwjang/project/IMG/cache\",  # Optional: Replace with your cache directory if different\n",
     "    \"checkpoint\": None,  # Optional: Replace with your checkpoint path if using a custom model\n",
@@ -81,6 +92,26 @@
     "\n",
     "# Call the predict function with the defined parameters\n",
     "predict(**params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<KeysViewHDF5 ['test copy 2', 'test copy 3']>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os, h5py\n",
+    "path = '/home/hwjang/project/IMG/241212/boltz/src/boltz/temp/boltz_results_test/predictions/s.h5'\n",
+    "f = h5py.File(path, 'r')\n",
+    "print(f.keys())"
    ]
   }
  ],
